# debugging_api

./: docker-compose.yml
api/: Dockerfile  pyproject.toml
api/src/capstone2/: crud.py  example.py  main.py  models.py  schemas.py
